WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
84035
Web Inspector: [Chromium] Crash when inspecting empty IndexedDB object store.
https://bugs.webkit.org/show_bug.cgi?id=84035
Summary
Web Inspector: [Chromium] Crash when inspecting empty IndexedDB object store.
Vsevolod Vlasov
Reported
2012-04-16 07:28:29 PDT
patch to follow
Attachments
Patch
(1.48 KB, patch)
2012-04-16 07:32 PDT
,
Vsevolod Vlasov
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vsevolod Vlasov
Comment 1
2012-04-16 07:32:29 PDT
Created
attachment 137345
[details]
Patch
Vsevolod Vlasov
Comment 2
2012-04-16 07:33:31 PDT
See also:
http://code.google.com/p/chromium/issues/detail?id=121578
Pavel Feldman
Comment 3
2012-04-17 06:01:27 PDT
Comment on
attachment 137345
[details]
Patch Can we test this?
Vsevolod Vlasov
Comment 4
2012-04-17 06:42:17 PDT
Chromium DumpRenderTree does not support IndexedDB.
Vsevolod Vlasov
Comment 5
2012-04-17 06:44:59 PDT
Committed
r114373
: <
http://trac.webkit.org/changeset/114373
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug