Web Inspector: [Chromium] Crash when inspecting empty IndexedDB object store. https://bugs.webkit.org/show_bug.cgi?id=84035

Reviewed by Pavel Feldman.

Added a check that m_idbCursor is not null before calling postSuccessHandlerCallback() on it.

* inspector/InspectorIndexedDBAgent.cpp:
(WebCore):

Canonical link: https://commits.webkit.org/101643@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114373 268f45cc-cd09-0410-ab3c-d52691b4dbfc